--- a/force-app/main/default/classes/AccountCasesController.cls
+++ b/force-app/main/default/classes/AccountCasesController.cls
@@ -1,7 +1,7 @@
 public with sharing class AccountCasesController {
     @AuraEnabled //rend la méthode disponible cote front
     public static List<Case> findCasesBySubject(Id accountId, String subjectSearchTerm) {
-        // appel de la class AccountCasesSelector qui contient ma méthode findCasesBySubject
+        // appel de la class AccountCasesSelector qui contient ma méthode findCasesBySubject -> Heritage
         return AccountCasesSelector.findCasesBySubject(accountId, subjectSearchTerm);
     }
 }
